service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: leo-was
  name: leo-was-svc
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: leo-was
  type: ClusterIP
